--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -4,16 +4,13 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>2.8</TypeScriptToolsVersion>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="src\app\model\login.ts" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="src\assets\ApiDocumentation.html">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
 
   <ItemGroup>
