--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BouncyCastle.NetCore" Version="1.8.2" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="2.1.1" />
     <PackageReference Include="Sendgrid" Version="9.9.0" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
