--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="BouncyCastle.NetCore" Version="1.8.2" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Nethereum.Signer" Version="2.5.1" />
     <PackageReference Include="Sendgrid" Version="9.9.0" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
     <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
