--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Sendgrid" Version="9.9.0" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
     <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.0" />
   </ItemGroup>
 
 </Project>
