--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="BouncyCastle.NetCore" Version="1.8.2" />
+    <PackageReference Include="gfoidl.DataCompression" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="2.1.1" />
     <PackageReference Include="Nethereum.Signer" Version="2.5.1" />
     <PackageReference Include="Sendgrid" Version="9.9.0" />
