--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Follow\**" />
+    <EmbeddedResource Remove="Follow\**" />
+    <None Remove="Follow\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
@@ -34,7 +40,6 @@
   <ItemGroup>
     <Folder Include="Account\" />
     <Folder Include="Asset\" />
-    <Folder Include="Follow\" />
   </ItemGroup>
 
 </Project>
