--- a/Web/package.json
+++ b/Web/package.json
@@ -25,6 +25,7 @@
     "angular2-notifications": "^1.0.2",
     "core-js": "^2.5.4",
     "highcharts": "^6.1.1",
+    "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "^6.0.0",
     "web3": "^0.19",
     "web3-utils": "^1.0.0-beta.30",
