Refactoring configuration data

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,15 +1,40 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "Logging": {
+        "IncludeScopes": false,
+        "Debug": {
+            "LogLevel": {
+                "Default": "Error"
+            }
+        },
+        "Console": {
+            "LogLevel": {
+                "Default": "Error"
+            }
+        }
     },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
-  }
+    "ConnectionString": {
+        "Mongo": "",
+        "SQL": "",
+        "Storage": ""
+    },
+    "Email": {
+        "SendGridKey": "",
+        "Error": [
+            "ariny.guedes@auctus.org",
+            "thiago.araujo@auctus.org",
+            "daniel.vitorino@auctus.org",
+            "duarte.figueiredo@auctus.org"
+        ]
+    },
+    "Auth": {
+        "Secret": "",
+        "MinimumAuc": 1000
+    },
+    "Url": {
+        "Web3": "https://api.infura.io",
+        "Web": "https://platform.auctus.org",
+        "Api": "https://auctusplatformapi.azurewebsites.net",
+        "Web3Route": "v1/jsonrpc/mainnet/"
+    },
+    "AucContract": "0xc12d099be31567add4e4e4d0d45691c3f58f5663"
 }
