Update securiry file

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -30,6 +30,10 @@
         "Secret": "",
         "MinimumAuc": 1000
     },
+    "Security": {
+        "HashSecret": "",
+        "CryptoSecret": ""
+    },
     "Url": {
         "Web3": "https://api.infura.io",
         "Web": "https://platform.auctus.org",
