Update application Insights

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -12,6 +12,9 @@
             }
         }
     },
+    "ApplicationInsights": {
+        "InstrumentationKey": ""
+    },
     "ConnectionString": {
         "Mongo": "",
         "SQL": "",
