--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -10,21 +10,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.2" />
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.1" />
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.2.4" />
-	<PackageReference Include="NLog.Web.AspNetCore" Version="4.6.0" />
 	<PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
   </ItemGroup>
   
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <None Include="nlog.config" />
   </ItemGroup>
 
   <ItemGroup>
