Set up web csproj

--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <ApplicationInsightsResourceId>/subscriptions/e9ec56be-9e25-4aee-b573-a75029f0b5a1/resourcegroups/AuctusPlatformApiDev/providers/microsoft.insights/components/AuctusPlatformApiDevInsights</ApplicationInsightsResourceId>
+    <ApplicationInsightsAnnotationResourceId>/subscriptions/e9ec56be-9e25-4aee-b573-a75029f0b5a1/resourcegroups/AuctusPlatformApiDev/providers/microsoft.insights/components/AuctusPlatformApiDevInsights</ApplicationInsightsAnnotationResourceId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -27,6 +29,10 @@
     <ProjectReference Include="..\Business\Business.csproj" />
     <ProjectReference Include="..\Model\Model.csproj" />
     <ProjectReference Include="..\Util\Util.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
 </Project>
