--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -43,5 +43,6 @@
         "Api": "https://auctusplatformapi.azurewebsites.net",
         "Web3Route": "v1/jsonrpc/mainnet/"
     },
-    "AucContract": "0xc12d099be31567add4e4e4d0d45691c3f58f5663"
+    "AucContract": "0xc12d099be31567add4e4e4d0d45691c3f58f5663",
+    "MinimumTimeInSecondsBetweenAdvices": 300
 }
