--- a/Web/package.json
+++ b/Web/package.json
@@ -13,16 +13,16 @@
   "dependencies": {
     "@angular/animations": "^6.1.3",
     "@angular/cdk": "^6.4.5",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
+    "@angular/common": "^6.1.3",
+    "@angular/compiler": "^6.1.3",
+    "@angular/core": "^6.1.3",
+    "@angular/forms": "^6.1.3",
+    "@angular/http": "^6.1.3",
     "@angular/material": "^6.4.5",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
-    "@types/highcharts": "^5.0.25",
+    "@angular/platform-browser": "^6.1.3",
+    "@angular/platform-browser-dynamic": "^6.1.3",
+    "@angular/router": "^6.1.3",
+    "@types/highcharts": "^5.0.27",
     "angular-highcharts": "^6.2.6",
     "angular2-notifications": "^1.0.2",
     "core-js": "^2.5.4",
@@ -30,29 +30,29 @@
     "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "^6.0.0",
     "sha3": "^1.2.2",
-    "web3": "^0.19",
-    "web3-utils": "^1.0.0-beta.30",
+    "web3": "^1.0.0-beta.35",
+    "web3-utils": "^1.0.0-beta.35",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular-devkit/build-angular": "~0.6.5",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.5",
-    "@angular/language-service": "^6.0.3",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "@angular/compiler-cli": "^6.1.3",
+    "@angular-devkit/build-angular": "^0.7.4",
+    "typescript": "^3.0.1",
+    "@angular/cli": "^6.1.4",
+    "@angular/language-service": "^6.1.3",
+    "@types/jasmine": "^2.8.6",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^10.7.1",
+    "codelyzer": "^4.4.4",
+    "jasmine-core": "^3.2.1",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^1.3.0",
+    "protractor": "^5.4.0",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0"
   }
 }
