--- a/Web/package.json
+++ b/Web/package.json
@@ -30,15 +30,14 @@
     "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "^6.0.0",
     "sha3": "^1.2.2",
-    "web3": "^1.0.0-beta.35",
+    "web3": "^0.19.1",
     "web3-utils": "^1.0.0-beta.35",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.1.3",
     "@angular-devkit/build-angular": "^0.7.4",
-    "typescript": "^3.0.1",
     "@angular/cli": "^6.1.4",
+    "@angular/compiler-cli": "^6.1.3",
     "@angular/language-service": "^6.1.3",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "^2.0.3",
@@ -53,6 +52,7 @@
     "karma-jasmine-html-reporter": "^1.3.0",
     "protractor": "^5.4.0",
     "ts-node": "^7.0.1",
-    "tslint": "^5.11.0"
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.1"
   }
 }
