--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -22,6 +22,7 @@
     },
     "Email": {
         "SendGridKey": "",
+        "ForcedEmail": "",
         "Error": [
             "ariny.guedes@auctus.org",
             "thiago.araujo@auctus.org",
