--- a/DataAccessInterfaces/DataAccessInterfaces.csproj
+++ b/DataAccessInterfaces/DataAccessInterfaces.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Sendgrid" Version="9.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DomainObjects\DomainObjects.csproj" />
   </ItemGroup>
 
