--- a/DataAccessMock/DataAccessMock.csproj
+++ b/DataAccessMock/DataAccessMock.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Sendgrid" Version="9.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DataAccessInterfaces\DataAccessInterfaces.csproj" />
     <ProjectReference Include="..\DomainObjects\DomainObjects.csproj" />
   </ItemGroup>
