--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Auctus.Util</RootNamespace>
     <AssemblyName>Util</AssemblyName>
+	<DebugType>Full</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
