--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Auctus.Model</RootNamespace>
     <AssemblyName>Model</AssemblyName>
+	<DebugType>Full</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
