--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -8,6 +8,7 @@
     <ApplicationIcon />
     <OutputType>Library</OutputType>
     <StartupObject />
+	<DebugType>Full</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
