--- a/DomainObjects/DomainObjects.csproj
+++ b/DomainObjects/DomainObjects.csproj
@@ -4,7 +4,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Auctus.DomainObjects</RootNamespace>
     <AssemblyName>DomainObjects</AssemblyName>
-	<DebugType>Full</DebugType>
+  </PropertyGroup>
+  
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <DebugType>Full</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
