--- a/DataAccessMock/DataAccessMock.csproj
+++ b/DataAccessMock/DataAccessMock.csproj
@@ -2,9 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-	<DebugType>Full</DebugType>
   </PropertyGroup>
-
+  
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <DebugType>Full</DebugType>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="Sendgrid" Version="9.9.0" />
   </ItemGroup>
