--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -47,5 +47,6 @@
     "AucContract": "0xc12d099be31567add4e4e4d0d45691c3f58f5663",
     "MinimumTimeInSecondsBetweenAdvices": 300,
     "MinimumDaysToKeepAuc": 60,
-    "DiscountPercentageOnAuc": 20
+    "DiscountPercentageOnAuc": 20,
+    "Admins": []
 }
