--- a/Web/package.json
+++ b/Web/package.json
@@ -28,6 +28,7 @@
     "angular2-notifications": "^1.0.2",
     "core-js": "^2.5.4",
     "highcharts": "^6.1.1",
+    "ng-http-loader": "^3.0.0",
     "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "^6.0.0",
     "sha3": "^1.2.2",
