--- a/Web/package.json
+++ b/Web/package.json
@@ -26,6 +26,7 @@
     "@types/highcharts": "^5.0.27",
     "angular-highcharts": "^6.2.6",
     "angular2-notifications": "^1.0.2",
+    "angular2-promise-buttons": "^2.1.1",
     "core-js": "^2.5.4",
     "highcharts": "^6.1.1",
     "ng-http-loader": "^3.0.0",
