--- a/Web/package.json
+++ b/Web/package.json
@@ -33,7 +33,7 @@
     "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "^6.0.0",
     "sha3": "^1.2.2",
-    "web3": "^0.20.3",
+    "web3": "~0.20.3",
     "web3-utils": "^1.0.0-beta.35",
     "zone.js": "^0.8.26"
   },
