Settings json update

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -48,5 +48,5 @@
     "MinimumTimeInSecondsBetweenAdvices": 300,
     "MinimumDaysToKeepAuc": 60,
     "DiscountPercentageOnAuc": 20,
-    "Admins": []
+    "Admins": [ "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "" ]
 }
