--- a/Web/src/assets/config/config.json
+++ b/Web/src/assets/config/config.json
@@ -1,5 +1,5 @@
 {
     "apiUrl": "http://localhost:50427/api/",
-    "assetImgUrl": "https://auctusplatform.blob.core.windows.net/assetsicons/{id}.png",
-    "profileImgUrl": "https://auctusplatform.blob.core.windows.net/userpicture/{id}.png"
+    "assetImgUrl": "https://auctusplatform.azureedge.net/assetsicons/{id}.png",
+    "profileImgUrl": "https://auctusplatform.azureedge.net/userpicture/{id}.png"
 }
