--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -30,10 +30,13 @@
             "duarte.figueiredo@auctus.org"
         ]
     },
-    "Auth": {
-        "Secret": "",
-        "MinimumAuc": 1000
-    },
+  "Auth": {
+    "Secret": "",
+    "MinimumAuc": 1000,
+    "FacebookAppID": "",
+    "FacebookAppSecret": "",
+    "GoogleClientID": ""
+  },
     "Security": {
         "HashSecret": "",
         "CryptoSecret": ""
