--- a/Web/package.json
+++ b/Web/package.json
@@ -27,12 +27,14 @@
     "angular-highcharts": "^6.2.6",
     "angular2-notifications": "^1.0.2",
     "angular2-promise-buttons": "^2.1.1",
+    "angular5-social-login": "^1.0.9",
     "core-js": "^2.5.4",
     "highcharts": "^6.1.1",
     "ng-http-loader": "^3.0.0",
     "ngx-bar-rating": "^1.1.0",
     "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.3.1",
     "sha3": "^1.2.2",
     "web3": "~0.20.3",
     "web3-utils": "^1.0.0-beta.35",
