--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -30,13 +30,13 @@
             "duarte.figueiredo@auctus.org"
         ]
     },
-  "Auth": {
-    "Secret": "",
-    "MinimumAuc": 1000,
-    "FacebookAppID": "",
-    "FacebookAppSecret": "",
-    "GoogleClientID": ""
-  },
+    "Auth": {
+        "Secret": "",
+        "MinimumAuc": 1000,
+        "FacebookAppID": "",
+        "FacebookAppSecret": "",
+        "GoogleClientID": ""
+    },
     "Security": {
         "HashSecret": "",
         "CryptoSecret": ""
@@ -47,6 +47,7 @@
         "Api": "https://auctusplatformapi.azurewebsites.net",
         "Web3Route": "v1/jsonrpc/mainnet/"
     },
+    "RecaptchaSecret": "",
     "AucContract": "0xc12d099be31567add4e4e4d0d45691c3f58f5663",
     "MinimumTimeInSecondsBetweenAdvices": 300,
     "MinimumDaysToKeepAuc": 60,
