--- a/Web/package.json
+++ b/Web/package.json
@@ -31,6 +31,7 @@
     "core-js": "^2.5.4",
     "highcharts": "^6.1.1",
     "ng-http-loader": "^3.0.0",
+    "ng-recaptcha": "^3.0.5",
     "ngx-bar-rating": "^1.1.0",
     "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "^6.0.0",
