--- a/Web/package.json
+++ b/Web/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser": "^6.1.3",
     "@angular/platform-browser-dynamic": "^6.1.3",
     "@angular/router": "^6.1.3",
+    "@fortawesome/angular-fontawesome": "^0.1.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@types/highcharts": "^5.0.27",
     "angular-highcharts": "^6.2.6",
     "angular2-notifications": "^1.0.2",
