--- a/Web/package.json
+++ b/Web/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@types/highcharts": "^5.0.27",
+    "angular-feather": "^5.3.0",
     "angular-highcharts": "^6.2.6",
     "angular2-notifications": "^1.0.2",
     "angular2-promise-buttons": "^2.1.1",
