--- a/Web/package.json
+++ b/Web/package.json
@@ -41,6 +41,7 @@
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.1",
     "sha3": "^1.2.2",
+    "time-ago-pipe": "^1.3.2",
     "web3": "~0.20.3",
     "web3-utils": "^1.0.0-beta.35",
     "zone.js": "^0.8.26"
