--- a/Web/package.json
+++ b/Web/package.json
@@ -33,6 +33,7 @@
     "angular2-promise-buttons": "^2.1.1",
     "angular5-social-login": "^1.0.9",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "highcharts": "^6.1.1",
     "ng-http-loader": "^3.0.0",
     "ng-recaptcha": "^3.0.5",
