--- a/Web/src/assets/config/config.json
+++ b/Web/src/assets/config/config.json
@@ -1,5 +1,6 @@
 {
     "apiUrl": "http://localhost:50427/api/",
+    "webUrl": "http://localhost:4200",
     "assetImgUrl": "https://auctusplatform.azureedge.net/assetsicons/{id}.png",
     "profileImgUrl": "https://auctusplatform.azureedge.net/userpicture/{id}.png"
 }
