--- a/Web/package.json
+++ b/Web/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^6.1.3",
     "@fortawesome/angular-fontawesome": "^0.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-brands-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@types/highcharts": "^5.0.27",
     "angular-feather": "^5.3.0",
@@ -39,6 +40,7 @@
     "ng-recaptcha": "^3.0.5",
     "ngx-bar-rating": "^1.1.0",
     "ngx-infinite-scroll": "^6.0.1",
+    "ngx-owl-carousel": "^2.0.7",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.1",
     "sha3": "^1.2.2",
