Add new domain Asset Current Value to the solution

--- a/DataAccessMock/DataAccessMock.csproj
+++ b/DataAccessMock/DataAccessMock.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <RootNamespace>Auctus.DataAccessMock</RootNamespace>
   </PropertyGroup>
   
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
