--- a/DataAccessInterfaces/DataAccessInterfaces.csproj
+++ b/DataAccessInterfaces/DataAccessInterfaces.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <RootNamespace>Auctus.DataAccessInterfaces</RootNamespace>
   </PropertyGroup>
   
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
