finishing e-mail notification for new recommendation

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -40,12 +40,13 @@
     "Security": {
         "HashSecret": "",
         "CryptoSecret": ""
-    },
+      },
     "Url": {
-        "Web3": "https://api.infura.io",
-        "Web": "https://platform.auctus.org",
-        "Api": "https://auctusplatformapi.azurewebsites.net",
-        "Web3Route": "v1/jsonrpc/mainnet/"
+      "Web3": "https://api.infura.io",
+      "Web": "https://platform.auctus.org",
+      "Api": "https://auctusplatformapi.azurewebsites.net",
+      "Web3Route": "v1/jsonrpc/mainnet/",
+      "ProfileImgCdn": ""
     },
     "RecaptchaSecret": "",
     "AucContract": "0xc12d099be31567add4e4e4d0d45691c3f58f5663",
