Multiple cors origins

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -43,7 +43,7 @@
       },
     "Url": {
       "Web3": "https://api.infura.io",
-      "Web": "https://platform.auctus.org",
+      "Web": [ "https://experts.auctus.org", "", "" ],
       "Api": "https://auctusplatformapi.azurewebsites.net",
       "Web3Route": "v1/jsonrpc/mainnet/",
       "ProfileImgCdn": ""
