Data base modeling for asset event

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -35,7 +35,9 @@
         "MinimumAuc": 5000,
         "FacebookAppID": "",
         "FacebookAppSecret": "",
-        "GoogleClientID": ""
+        "GoogleClientID": "",
+        "CoinMarketCalClientID": "",
+        "CoinMarketCalClientSecret": ""
     },
     "Security": {
         "HashSecret": "",
