--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -42,18 +42,95 @@
     "Security": {
         "HashSecret": "",
         "CryptoSecret": ""
-      },
+    },
     "Url": {
-      "Web3": "https://api.infura.io",
-      "Web": [ "https://experts.auctus.org", "", "" ],
-      "Api": "https://auctusplatformapi.azurewebsites.net",
-      "Web3Route": "v1/jsonrpc/mainnet/",
-      "ProfileImgCdn": ""
+        "Web3": "https://api.infura.io",
+        "Web": [ "https://experts.auctus.org", "", "" ],
+        "Api": "https://auctusplatformapi.azurewebsites.net",
+        "Web3Route": "v1/jsonrpc/mainnet/",
+        "ProfileImgCdn": ""
     },
     "RecaptchaSecret": "",
     "AucContract": "0xc12d099be31567add4e4e4d0d45691c3f58f5663",
     "MinimumTimeInSecondsBetweenAdvices": 300,
     "MinimumDaysToKeepAuc": 60,
     "DiscountPercentageOnAuc": 20,
-    "Admins": [ "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "" ]
+    "Admins": [ "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "" ],
+    "TerminalAssets": [
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        },
+        {
+            "Id": "",
+            "ChartPair": "",
+            "ChartExchange": ""
+        }
+    ]
 }
