--- a/Web/package.json
+++ b/Web/package.json
@@ -8,7 +8,11 @@
     "build-prod": "ng build --prod --source-map=false",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "serve:ssr": "node dist/server",
+    "build:client-and-server-bundles": "ng build --prod && ng run my-app:server",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
@@ -23,11 +27,14 @@
     "@angular/material": "^6.4.5",
     "@angular/platform-browser": "^6.1.3",
     "@angular/platform-browser-dynamic": "^6.1.3",
+    "@angular/platform-server": "^6.1.10",
     "@angular/router": "^6.1.3",
     "@fortawesome/angular-fontawesome": "^0.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-brands-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@nguniversal/express-engine": "^6.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.1.0",
     "@ngx-share/button": "^6.0.1",
     "@ngx-share/core": "^6.0.1",
     "@types/highcharts": "^5.0.27",
@@ -48,6 +55,7 @@
     "rxjs-compat": "^6.3.1",
     "sha3": "^1.2.2",
     "time-ago-pipe": "^1.3.2",
+    "ts-loader": "^5.2.2",
     "web3": "~0.20.3",
     "web3-utils": "^1.0.0-beta.35",
     "zone.js": "^0.8.26"
