--- a/Web/angular.json
+++ b/Web/angular.json
@@ -28,7 +28,9 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/owl.carousel/dist/owl.carousel.js"
+              "node_modules/owl.carousel/dist/owl.carousel.js",
+              "node_modules/highcharts/highcharts",
+              "node_modules/highcharts/highstock"
             ]
           },
           "configurations": {
