--- a/Web/angular.json
+++ b/Web/angular.json
@@ -29,8 +29,8 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
               "node_modules/owl.carousel/dist/owl.carousel.js",
-              "node_modules/highcharts/highcharts",
-              "node_modules/highcharts/highstock"
+              "node_modules/highcharts/highcharts.js",
+              "node_modules/highcharts/highstock.js"
             ]
           },
           "configurations": {
