--- a/Web/angular.json
+++ b/Web/angular.json
@@ -28,9 +28,7 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/owl.carousel/dist/owl.carousel.js",
-              "node_modules/highcharts/highcharts.js",
-              "node_modules/highcharts/highstock.js"
+              "node_modules/owl.carousel/dist/owl.carousel.js"              
             ]
           },
           "configurations": {
