--- a/Web/src/tsconfig.app.json
+++ b/Web/src/tsconfig.app.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "es2015",
-    "types": []
+    "types": ["highcharts"]
   },
   "exclude": [
     "src/test.ts",
