--- a/Web/src/tsconfig.server.json
+++ b/Web/src/tsconfig.server.json
@@ -4,7 +4,7 @@
       "outDir": "../out-tsc/app",
       "baseUrl": "./",
       "module": "commonjs",
-      "types": []
+      "types": ["highcharts"]
     },
     "exclude": [
       "test.ts",
