--- a/Web/angular.json
+++ b/Web/angular.json
@@ -21,7 +21,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-			        "src/web.config"
+			        "web.config"
             ],
             "styles": [
               "src/styles.scss"
