--- a/Web/src/web.config
+++ b/Web/src/web.config
@@ -7,19 +7,16 @@
             <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
             <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
         </staticContent>
-    </system.webServer>
-    <system.webServer>
-    <rewrite>
-        <rules>
-            <rule name="angular cli routes" stopProcessing="true">
-                <match url=".*" />
-                <conditions logicalGrouping="MatchAll">
-                    <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                    <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                </conditions>
-                <action type="Rewrite" url="/" />
-            </rule>
-        </rules>
-    </rewrite>
+        <handlers>
+            <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
+        </handlers>
+        <rewrite>
+            <rules>
+                <rule name="DynamicContent">
+                     <match url="/*" />
+                     <action type="Rewrite" url="server.js"/>
+                </rule>
+            </rules>
+        </rewrite>
   </system.webServer>
 </configuration> 
