--- a/Web/package.json
+++ b/Web/package.json
@@ -8,27 +8,34 @@
     "build-prod": "ng build --prod --source-map=false",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "serve:ssr": "node dist/server",
+    "build:client-and-server-bundles": "ng build --prod && ng run Web:server",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.3",
-    "@angular/cdk": "^6.4.5",
-    "@angular/common": "^6.1.3",
-    "@angular/compiler": "^6.1.3",
-    "@angular/core": "^6.1.3",
-    "@angular/flex-layout": "^6.0.0-beta.17",
-    "@angular/forms": "^6.1.3",
-    "@angular/http": "^6.1.3",
-    "@angular/material": "^6.4.5",
-    "@angular/platform-browser": "^6.1.3",
-    "@angular/platform-browser-dynamic": "^6.1.3",
-    "@angular/router": "^6.1.3",
+    "@angular/animations": "^7.0.0",
+    "@angular/cdk": "^7.0.0-beta.0",
+    "@angular/common": "^7.0.0",
+    "@angular/compiler": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/flex-layout": "^7.0.0-beta.19",
+    "@angular/forms": "^7.0.0",
+    "@angular/http": "^7.0.0",
+    "@angular/material": "^7.0.0-beta.0",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "@angular/platform-server": "^7.0.0",
+    "@angular/router": "^7.0.0",
     "@aspnet/signalr": "^1.0.4",
     "@fortawesome/angular-fontawesome": "^0.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-brands-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@nguniversal/express-engine": "^6.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.1.0",
     "@ngx-share/button": "^6.0.1",
     "@ngx-share/core": "^6.0.1",
     "@types/highcharts": "^5.0.27",
@@ -45,10 +52,11 @@
     "ngx-bar-rating": "^1.1.0",
     "ngx-infinite-scroll": "^6.0.1",
     "ngx-owl-carousel": "^2.0.7",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.1",
     "sha3": "^1.2.2",
     "time-ago-pipe": "^1.3.2",
+    "ts-loader": "^5.2.2",
     "web3": "~0.20.3",
     "web3-utils": "^1.0.0-beta.35",
     "zone.js": "^0.8.26"
@@ -56,8 +64,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.7.4",
     "@angular/cli": "^6.1.4",
-    "@angular/compiler-cli": "^6.1.3",
-    "@angular/language-service": "^6.1.3",
+    "@angular/compiler-cli": "^7.0.0",
+    "@angular/language-service": "^7.0.0",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^10.7.1",
@@ -72,6 +80,7 @@
     "protractor": "^5.4.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "^2.9.1"
+    "typescript": "^3.1.3",
+    "webpack-cli": "^3.1.2"
   }
 }
