A lot of adjustments to use binance ticker

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -55,6 +55,9 @@
     "MinimumTimeInSecondsBetweenAdvices": 300,
     "MinimumDaysToKeepAuc": 60,
     "DiscountPercentageOnAuc": 20,
+    "AssetUSDId": 241,
+    "AssetBTCId": 1,
+    "AssetETHId": 2,
     "Admins": [ "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "" ],
     "TerminalAssets": [
         {
