sendgrid api connection

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -37,7 +37,8 @@
         "FacebookAppSecret": "",
         "GoogleClientID": "",
         "CoinMarketCalClientID": "",
-        "CoinMarketCalClientSecret": ""
+        "CoinMarketCalClientSecret": "",
+        "SendGridApiKey":  ""
     },
     "Security": {
         "HashSecret": "",
