--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -20,16 +20,17 @@
         "SQL": "",
         "Storage": ""
     },
-    "Email": {
-        "SendGridKey": "",
-        "ForcedEmail": "",
-        "Error": [
-            "ariny.guedes@auctus.org",
-            "thiago.araujo@auctus.org",
-            "daniel.vitorino@auctus.org",
-            "duarte.figueiredo@auctus.org"
-        ]
-    },
+  "Email": {
+      "SendGridKey": "",
+      "ForcedEmail": "",
+      "Error": [
+        "ariny.guedes@auctus.org",
+        "thiago.araujo@auctus.org",
+        "daniel.vitorino@auctus.org",
+        "duarte.figueiredo@auctus.org"
+      ],
+      "WebSiteNewsLetterSendGridKey": ""
+  },
     "Auth": {
         "Secret": "",
         "MinimumAuc": 5000,
@@ -37,8 +38,7 @@
         "FacebookAppSecret": "",
         "GoogleClientID": "",
         "CoinMarketCalClientID": "",
-        "CoinMarketCalClientSecret": "",
-        "SendGridApiKey":  ""
+        "CoinMarketCalClientSecret": ""
     },
     "Security": {
         "HashSecret": "",
