Basa data for include fee

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -20,17 +20,17 @@
         "SQL": "",
         "Storage": ""
     },
-  "Email": {
-      "SendGridKey": "",
-      "ForcedEmail": "",
-      "Error": [
-        "ariny.guedes@auctus.org",
-        "thiago.araujo@auctus.org",
-        "daniel.vitorino@auctus.org",
-        "duarte.figueiredo@auctus.org"
-      ],
-      "WebSiteNewsLetterSendGridKey": ""
-  },
+    "Email": {
+        "SendGridKey": "",
+        "ForcedEmail": "",
+        "Error": [
+            "ariny.guedes@auctus.org",
+            "thiago.araujo@auctus.org",
+            "daniel.vitorino@auctus.org",
+            "duarte.figueiredo@auctus.org"
+        ],
+        "WebSiteNewsLetterSendGridKey": ""
+    },
     "Auth": {
         "Secret": "",
         "MinimumAuc": 5000,
@@ -58,6 +58,8 @@
     "AssetUSDId": 241,
     "AssetBTCId": 1,
     "AssetETHId": 2,
+    "TakerFee": 0.1,
+    "MakerFee": 0.1,
     "VirtualMoney": 100000,
     "Admins": [ "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "" ],
     "TerminalAssets": [
