Set fee for all trades on backend API

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -58,8 +58,7 @@
     "AssetUSDId": 241,
     "AssetBTCId": 1,
     "AssetETHId": 2,
-    "TakerFee": 0.1,
-    "MakerFee": 0.1,
+    "OrderFee": 0.1,
     "VirtualMoney": 100000,
     "Admins": [ "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "" ],
     "TerminalAssets": [
