Edit stop loss and take profit

--- a/WebSocketClient/WebSocketClient.csproj
+++ b/WebSocketClient/WebSocketClient.csproj
@@ -16,13 +16,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.Development.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.Production.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="run.cmd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
