--- a/WebSocketClient/appsettings.json
+++ b/WebSocketClient/appsettings.json
@@ -1,4 +1,6 @@
 ﻿{
-  "AuctusApiAuthToken": "",
-  "AuctusApiUrl": ""
+  "WebJob": {
+    "AuctusApiAuthToken": "",
+    "AuctusApiUrl": ""
+  }  
 }
